--- a/src/app/content-blocks/responsive-big-image-article/responsive-big-image-article.component.scss
+++ b/src/app/content-blocks/responsive-big-image-article/responsive-big-image-article.component.scss
@@ -1,3 +1,5 @@
+@import "src/styles/break-points";
+
 :host {
   display: block;
 }
@@ -23,7 +25,12 @@ img {
 
 .image {
   overflow: hidden;
-  margin-bottom: 10px;
+}
+
+@include mobile {
+  .image {
+    margin-bottom: 10px;
+  }
 }
 
 .intro {
